tests/baselines/reference/restParamModifier2.errors.txt
tests/cases/compiler/restParamModifier2.ts(2,24): error TS1005: ',' expected.


==== tests/cases/compiler/restParamModifier2.ts (1 errors) ====
    class C {
        constructor(public ...rest: string[]) {}
                           ~~~
!!! error TS1005: ',' expected.
    }